--- a/client/src/assets/styles/AddAnnounce.css
+++ b/client/src/assets/styles/AddAnnounce.css
@@ -4,7 +4,6 @@
   background-position: center;
   background-repeat: no-repeat;
   height: 100vh;
-
   margin: 0;
   padding: 0;
 }
@@ -46,6 +45,7 @@
   display: flex;
   justify-content: space-around;
   margin-bottom: 1rem;
+  font-weight: 400;
 }
 
 .FormAnnounces {
