--- a/client/src/assets/styles/Announce.css
+++ b/client/src/assets/styles/Announce.css
@@ -67,6 +67,8 @@
   background-color: var(--primary-color);
   color: var(--secondary-color);
   padding: 1rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: rgb(211, 220, 126);
 }
 
 .cardannounce-container::-webkit-scrollbar {
@@ -76,4 +78,12 @@
 .cardannounce-container::-webkit-scrollbar-thumb {
   background-color: var(--third-color);
   border-radius: 5px;
+}
+
+.titleannounce {
+  color: var(--third-color);
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: space-around;
+  font-family: var(--primary-font);
 }
