--- a/client/src/assets/styles/Announce.css
+++ b/client/src/assets/styles/Announce.css
@@ -40,6 +40,7 @@
   justify-content: flex-end;
   color: var(--secondary-color);
   margin-top: -1rem;
+  font-weight: 400;
 }
 .lottie-animation {
   width: 220px;
@@ -86,4 +87,39 @@
   display: flex;
   justify-content: space-around;
   font-family: var(--primary-font);
+}
+
+@media (min-width: 992px) {
+  .fullannounce {
+    background-position: top;
+    height: 100vh;
+    overflow: hidden;
+  }
+
+  .thetitle {
+    font-size: 5rem;
+    margin-top: 0;
+  }
+
+  .thetitle > span {
+    font-size: 5rem;
+  }
+
+  .findajob {
+    font-size: 5rem;
+    margin-right: 80rem;
+  }
+
+  .pepetes {
+    font-size: 4rem;
+    margin-right: 70rem;
+    margin-top: -3rem;
+    margin-bottom: -2rem;
+  }
+
+  .lottie-animation {
+    width: 200px;
+    height: 200px;
+    margin-right: 20rem;
+  }
 }
