--- a/client/src/assets/styles/Announce.css
+++ b/client/src/assets/styles/Announce.css
@@ -8,7 +8,6 @@
   padding: 1rem;
   font-family: var(--primary-font);
 }
-
 .thetitle {
   color: var(--third-color);
   font-size: 3.2rem;
@@ -23,31 +22,23 @@
   font-size: 3.2rem;
   font-weight: 400;
 }
-
 .findajob {
   color: var(--secondary-color);
   font-weight: 400;
   margin-top: 2rem;
-  font-size: 1.9rem;
-  margin-right: 5rem;
+  font-size: 1.5rem;
   margin-left: 2%;
+  line-height: 1;
 }
-
 .pepetes {
-  font-size: 1.9rem;
-  color: var(--secondary-color);
-  margin-top: -1rem;
-  font-weight: 400;
-  margin-left: 2%;
+  line-height: 1;
 }
-
 .lottie-animation {
   width: 220px;
   height: 220px;
   margin: auto;
   display: block;
 }
-
 .cardannounce-container {
   display: flex;
   overflow-x: auto;
@@ -55,10 +46,9 @@
   gap: 20px;
   scroll-behavior: smooth;
 }
-
 .cardannounce2 {
   width: 300px;
-  height: 300px;
+  height: 390px;
   background-color: var(--first-grey);
   border-radius: 5px;
   display: flex;
@@ -70,22 +60,29 @@
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: rgb(211, 220, 126);
 }
-
 .cardannounce-container::-webkit-scrollbar {
   height: 10px;
 }
-
 .cardannounce-container::-webkit-scrollbar-thumb {
   background-color: var(--third-color);
   border-radius: 5px;
 }
-
 .titleannounce {
   color: var(--third-color);
   font-size: 1.5rem;
   display: flex;
   justify-content: space-around;
   font-family: var(--primary-font);
+}
+.imageband {
+  max-height: 10rem;
+  max-width: 10rem;
+  display: flex;
+}
+.sloganlogo {
+  display: flex;
+  flex-direction: row;
+  padding-top: 2rem;
 }
 
 @media (min-width: 992px) {
@@ -108,15 +105,12 @@
     font-size: 5rem;
   }
 
-  .pepetes {
-    font-size: 4rem;
-    margin-top: -3rem;
-    margin-bottom: -2rem;
-  }
-
   .lottie-animation {
     width: 200px;
     height: 200px;
     margin-right: 20rem;
+  }
+  .sloganlogo {
+    padding-bottom: 4rem;
   }
 }
