--- a/client/src/assets/styles/EditAnnounce.css
+++ b/client/src/assets/styles/EditAnnounce.css
@@ -7,13 +7,13 @@
   margin: 0;
   padding: 0;
 }
-.AddAnnounce {
+.EditAnnounce {
   display: flex;
   flex-direction: column;
   align-items: center;
   font-family: var(--primary-font);
 }
-.FormAnnounce {
+.EditAnnounce_Form {
   background-color: var(--primary-color);
   margin-top: 7%;
   border-radius: 4px;
@@ -36,18 +36,28 @@
   font-size: 3.2rem;
   font-weight: 400;
 }
-.createannounce {
+.blocmodify {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.modifyannounce {
   display: flex;
   justify-content: space-around;
   margin-bottom: 1rem;
   font-weight: 400;
 }
-.FormAnnounces {
+.supprannounce {
   display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
+  justify-content: space-around;
+  font-size: 1.5rem;
+  background-color: var(--second-color);
+  color: white;
+  margin: 1rem;
+  border-radius: 5px;
+  font-weight: 500;
 }
-.validerlannonce {
+.validerlannonce2 {
   display: flex;
   justify-content: space-around;
   font-size: 1.5rem;
@@ -56,8 +66,20 @@
   margin: 1rem;
   border-radius: 5px;
   font-weight: 500;
+  padding: 8px;
 }
-.FormAnnounces > input {
+.supprannounce {
+  display: flex;
+  justify-content: space-around;
+  font-size: 1.5rem;
+  font-family: var(--primary-font);
+  color: white;
+  border-radius: 5px;
+  font-weight: 400;
+  padding: 8px;
+  margin-top: -7px;
+}
+.EditAnnounce_Form > input {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
 }
@@ -69,11 +91,11 @@
     overflow: hidden;
   }
 
-  .AddAnnounce {
+  .EditAnnounce {
     margin-top: 1%;
   }
 
-  .FormAnnounce {
+  .EditAnnounce_Form {
     width: 50rem;
     height: auto;
     margin-top: 1%;
@@ -89,24 +111,30 @@
     font-size: 5rem;
   }
 
-  .createannounce {
+  .modifyannounce {
     font-size: 2.2rem;
   }
 
-  .FormAnnounces {
+  .EditAnnounce_Form {
     gap: 0.5rem;
     font-size: 1.2rem;
   }
 
-  .validerlannonce {
+  .validerlannonce2 {
     font-size: 1.8rem;
     width: 50%;
     margin-left: 11.5rem;
   }
 
-  .FormAnnounces > input,
-  .FormAnnounces > textarea {
-    font-size: 0.8rem;
-    height: 2rem;
+  .supprannounce {
+    font-size: 1.8rem;
+    width: 50%;
+    margin-left: 11.5rem;
+  }
+
+  .EditAnnounce_Form > input,
+  .EditAnnounce_Form > textarea {
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 4px;
   }
 }
